kubernetes/apps/minio/minio/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: https
  hostnames: ["minio.darkfellanetwork.com", "minio-s3.darkfellanetwork.com"]
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
        headers:
          - name: Host
            value: "minio.darkfellanetwork.com"
    backendRefs:
      - name: minio
        port: http
  - matches:
      - path:
          type: PathPrefix
          value: /
        headers:
          - name: Host
            value: "minio-s3.darkfellanetwork.com"
    backendRefs:
      - name: minio
        port: s3
